--- a/paper/apssamp.bib
+++ b/paper/apssamp.bib
@@ -1,366 +1,272 @@
 @article{Krauss_2010,
-   title={Primordial Gravitational Waves and Cosmology},
-   volume={328},
-   ISSN={1095-9203},
-   url={http://dx.doi.org/10.1126/science.1179541},
-   DOI={10.1126/science.1179541},
-   number={5981},
-   journal={Science},
-   publisher={American Association for the Advancement of Science (AAAS)},
-   author={Krauss, Lawrence M. and Dodelson, Scott and Meyer, Stephan},
-   year={2010},
-   month=may, pages={989–992} }
+  title     = {Primordial Gravitational Waves and Cosmology},
+  volume    = {328},
+  issn      = {1095-9203},
+  url       = {http://dx.doi.org/10.1126/science.1179541},
+  doi       = {10.1126/science.1179541},
+  number    = {5981},
+  journal   = {Science},
+  publisher = {American Association for the Advancement of Science (AAAS)},
+  author    = {Krauss, Lawrence M. and Dodelson, Scott and Meyer, Stephan},
+  year      = {2010},
+  month     = may,
+  pages     = {989–992}
+}
 
 @misc{dickinson2016cmbforegroundsbrief,
-      title={CMB foregrounds - A brief review}, 
-      author={Clive Dickinson},
-      year={2016},
-      eprint={1606.03606},
-      archivePrefix={arXiv},
-      primaryClass={astro-ph.CO},
-      url={https://arxiv.org/abs/1606.03606}, 
+  title         = {CMB foregrounds - A brief review},
+  author        = {Clive Dickinson},
+  year          = {2016},
+  eprint        = {1606.03606},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.CO},
+  url           = {https://arxiv.org/abs/1606.03606}
 }
 @article{Stompor_2009,
-   title={Maximum likelihood algorithm for parametric component separation in cosmic microwave background experiments},
-   volume={392},
-   ISSN={1365-2966},
-   url={http://dx.doi.org/10.1111/j.1365-2966.2008.14023.x},
-   DOI={10.1111/j.1365-2966.2008.14023.x},
-   number={1},
-   journal={Monthly Notices of the Royal Astronomical Society},
-   publisher={Oxford University Press (OUP)},
-   author={Stompor, Radek and Leach, Samuel and Stivoli, Federico and Baccigalupi, Carlo},
-   year={2009},
-   month=jan, pages={216–232} }
+  title     = {Maximum likelihood algorithm for parametric component separation in cosmic microwave background experiments},
+  volume    = {392},
+  issn      = {1365-2966},
+  url       = {http://dx.doi.org/10.1111/j.1365-2966.2008.14023.x},
+  doi       = {10.1111/j.1365-2966.2008.14023.x},
+  number    = {1},
+  journal   = {Monthly Notices of the Royal Astronomical Society},
+  publisher = {Oxford University Press (OUP)},
+  author    = {Stompor, Radek and Leach, Samuel and Stivoli, Federico and Baccigalupi, Carlo},
+  year      = {2009},
+  month     = jan,
+  pages     = {216–232}
+}
 
 
 @misc{lineax,
-      title={Lineax: unified linear solves and linear least-squares in JAX and Equinox}, 
-      author={Jason Rader and Terry Lyons and Patrick Kidger},
-      year={2023},
-      eprint={2311.17283},
-      archivePrefix={arXiv},
-      primaryClass={cs.MS},
-      url={https://arxiv.org/abs/2311.17283}, 
+  title         = {Lineax: unified linear solves and linear least-squares in JAX and Equinox},
+  author        = {Jason Rader and Terry Lyons and Patrick Kidger},
+  year          = {2023},
+  eprint        = {2311.17283},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.MS},
+  url           = {https://arxiv.org/abs/2311.17283}
 }
 
 
 @software{deepmind2020jax,
-  title = {The {D}eep{M}ind {JAX} {E}cosystem},
+  title  = {The {D}eep{M}ind {JAX} {E}cosystem},
   author = {DeepMind and Babuschkin, Igor and Baumli, Kate and Bell, Alison and Bhupatiraju, Surya and Bruce, Jake and Buchlovsky, Peter and Budden, David and Cai, Trevor and Clark, Aidan and Danihelka, Ivo and Dedieu, Antoine and Fantacci, Claudio and Godwin, Jonathan and Jones, Chris and Hemsley, Ross and Hennigan, Tom and Hessel, Matteo and Hou, Shaobo and Kapturowski, Steven and Keck, Thomas and Kemaev, Iurii and King, Michael and Kunesch, Markus and Martens, Lena and Merzic, Hamza and Mikulik, Vladimir and Norman, Tamara and Papamakarios, George and Quan, John and Ring, Roman and Ruiz, Francisco and Sanchez, Alvaro and Sartran, Laurent and Schneider, Rosalia and Sezener, Eren and Spencer, Stephen and Srinivasan, Srivatsan and Stanojevi\'{c}, Milo\v{s} and Stokowiec, Wojciech and Wang, Luyu and Zhou, Guangyao and Viola, Fabio},
-  url = {http://github.com/google-deepmind},
-  year = {2020},
+  url    = {http://github.com/google-deepmind},
+  year   = {2020}
 }
 
 
 @article{Errard2015,
-  author = {Errard, J. and Stompor, R.},
-  title = {Foreground modeling and subtraction for cosmic microwave background B-mode observations},
+  author  = {Errard, J. and Stompor, R.},
+  title   = {Foreground modeling and subtraction for cosmic microwave background B-mode observations},
   journal = {Phys. Rev. D},
-  volume = {92},
-  number = {6},
-  year = {2015},
-  pages = {063005},
-  doi = {10.1103/PhysRevD.92.063005}
+  volume  = {92},
+  number  = {6},
+  year    = {2015},
+  pages   = {063005},
+  doi     = {10.1103/PhysRevD.92.063005}
 }
 
-@article{Planck2016SED,
-  author = {{Planck Collaboration}},
-  title = {Planck 2015 results. X. Diffuse component separation: Foreground maps},
-  journal = {Astronomy \& Astrophysics},
-  volume = {594},
-  year = {2016},
-  pages = {A10},
-  doi = {10.1051/0004-6361/201525967}
-}
-
-@article{MeisnerFinkbeiner2015,
-  author = {Meisner, A. M. and Finkbeiner, D. P.},
-  title = {Modeling thermal dust emission with Planck and IRAS},
-  journal = {The Astrophysical Journal},
-  volume = {798},
-  number = {2},
-  year = {2015},
-  pages = {88},
-  doi = {10.1088/0004-637X/798/2/88}
-}
 @article{ErrardStompor2018,
-  author = {Errard, Josquin and Stompor, Radek},
-  title = {Foreground modeling and subtraction for cosmic microwave background B-mode observations},
+  author  = {Errard, Josquin and Stompor, Radek},
+  title   = {Foreground modeling and subtraction for cosmic microwave background B-mode observations},
   journal = {Physical Review D},
-  volume = {92},
-  number = {6},
-  pages = {063005},
-  year = {2015},
-  doi = {10.1103/PhysRevD.92.063005}
-}
-@article{Kamionkowski1997,
-  title={Detecting gravitational waves from inflation through CMB polarization},
-  author={Kamionkowski, Marc and Kosowsky, Arthur and Stebbins, Albert},
-  journal={Physical Review Letters},
-  volume={78},
-  number={11},
-  year={1997},
-  pages={2058},
-  doi={10.1103/PhysRevLett.78.2058}
+  volume  = {92},
+  number  = {6},
+  pages   = {063005},
+  year    = {2015},
+  doi     = {10.1103/PhysRevD.92.063005}
 }
 
-@article{Seljak1997,
-  title={Measuring polarization in the cosmic microwave background},
-  author={Seljak, Uros and Zaldarriaga, Matias},
-  journal={Physical Review Letters},
-  volume={78},
-  number={11},
-  year={1997},
-  pages={2054},
-  doi={10.1103/PhysRevLett.78.2054}
-}
+
 
 @article{LiteBIRD2022,
-  title={LiteBIRD: a satellite for the studies of B-mode polarization and inflation from cosmic background radiation detection},
-  author={Hazumi, Masashi et al.},
-  journal={Progress of Theoretical and Experimental Physics},
-  volume={2022},
-  number={4},
-  year={2022},
-  pages={04A102},
-  doi={10.1093/ptep/ptac041}
+  title   = {LiteBIRD: a satellite for the studies of B-mode polarization and inflation from cosmic background radiation detection},
+  author  = {Hazumi, Masashi et al.},
+  journal = {Progress of Theoretical and Experimental Physics},
+  volume  = {2022},
+  number  = {4},
+  year    = {2022},
+  pages   = {04A102},
+  doi     = {10.1093/ptep/ptac041}
 }
 
-@article{FGBUSTER1,
-  author = {Stompor, R. and Errard, J.},
-  title = {Bayesian component separation and CMB B-mode detection in the presence of instrumental systematics},
-  journal = {Phys. Rev. D},
-  year = {2018},
-  volume = {97},
-  pages = {083006},
-  doi = {10.1103/PhysRevD.97.083006}
-}
 
-@misc{FGBUSTER2,
-  author = {Errard, Josquin},
-  title = {FGBuster: a flexible parametric component separation tool},
-  year = {2021},
-  note = {Zenodo: \url{https://doi.org/10.5281/zenodo.4561442}}
-}
+
 
 @article{Eriksen2008,
-  author = {Eriksen, H. K. et al.},
-  title = {Joint Bayesian component separation and CMB power spectrum estimation},
+  author  = {Eriksen, H. K. et al.},
+  title   = {Joint Bayesian component separation and CMB power spectrum estimation},
   journal = {ApJ},
-  volume = {676},
-  pages = {10--32},
-  year = {2008},
-  doi = {10.1086/527376}
+  volume  = {676},
+  pages   = {10--32},
+  year    = {2008},
+  doi     = {10.1086/527376}
 }
 
-@article{Cardoso2008,
-  author = {Cardoso, J.-F. et al.},
-  title = {Component separation with flexible models—Application to CMB data},
-  journal = {IEEE Journal of Selected Topics in Signal Processing},
-  volume = {2},
-  number = {5},
-  year = {2008},
-  pages = {735--746},
-  doi = {10.1109/JSTSP.2008.2005321}
-}
 
-@article{Planck2016SMICA,
-  author = {{Planck Collaboration}},
-  title = {Planck 2015 results. IX. Diffuse component separation: CMB maps},
-  journal = {A\&A},
-  volume = {594},
-  pages = {A9},
-  year = {2016},
-  doi = {10.1051/0004-6361/201525936}
-}
 
 @article{Planck2016Commander,
-  author = {{Planck Collaboration}},
-  title = {Planck 2015 results. X. Diffuse component separation: Foreground maps},
+  author  = {{Planck Collaboration}},
+  title   = {Planck 2015 results. X. Diffuse component separation: Foreground maps},
   journal = {A\&A},
-  volume = {594},
-  pages = {A10},
-  year = {2016},
-  doi = {10.1051/0004-6361/201525967}
+  volume  = {594},
+  pages   = {A10},
+  year    = {2016},
+  doi     = {10.1051/0004-6361/201525967}
 }
 
 
 @article{Kamionkowski1997,
-  title={Detecting gravitational waves from inflation through CMB polarization},
-  author={Kamionkowski, Marc and Kosowsky, Arthur and Stebbins, Albert},
-  journal={Phys. Rev. Lett.},
-  volume={78},
-  number={11},
-  pages={2058},
-  year={1997},
-  doi={10.1103/PhysRevLett.78.2058}
+  title   = {Detecting gravitational waves from inflation through CMB polarization},
+  author  = {Kamionkowski, Marc and Kosowsky, Arthur and Stebbins, Albert},
+  journal = {Phys. Rev. Lett.},
+  volume  = {78},
+  number  = {11},
+  pages   = {2058},
+  year    = {1997},
+  doi     = {10.1103/PhysRevLett.78.2058}
 }
 
 @article{Seljak1997,
-  title={Measuring polarization in the cosmic microwave background},
-  author={Seljak, Uros and Zaldarriaga, Matias},
-  journal={Phys. Rev. Lett.},
-  volume={78},
-  number={11},
-  pages={2054},
-  year={1997},
-  doi={10.1103/PhysRevLett.78.2054}
+  title   = {Measuring polarization in the cosmic microwave background},
+  author  = {Seljak, Uros and Zaldarriaga, Matias},
+  journal = {Phys. Rev. Lett.},
+  volume  = {78},
+  number  = {11},
+  pages   = {2054},
+  year    = {1997},
+  doi     = {10.1103/PhysRevLett.78.2054}
 }
 
-@article{LiteBIRD2022,
-  author={Hazumi, M. et al.},
-  title={LiteBIRD: A Satellite for the Studies of B-mode Polarization and Inflation from Cosmic Background Radiation Detection},
-  journal={Prog. Theor. Exp. Phys.},
-  year={2022},
-  volume={2022},
-  number={4},
-  pages={04A102},
-  doi={10.1093/ptep/ptac041}
-}
+
 
 @article{CMBS42022,
-  author={Abazajian, Kevork N. et al.},
-  title={CMB-S4 Science Case, Reference Design, and Project Plan},
-  journal={arXiv preprint},
-  year={2022},
-  eprint={2203.08024},
-  archivePrefix={arXiv},
-  primaryClass={astro-ph.CO}
+  author        = {Abazajian, Kevork N. et al.},
+  title         = {CMB-S4 Science Case, Reference Design, and Project Plan},
+  journal       = {arXiv preprint},
+  year          = {2022},
+  eprint        = {2203.08024},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.CO}
 }
 
 @article{Planck2016SED,
-  author={{Planck Collaboration}},
-  title={Planck 2015 results. X. Diffuse component separation: Foreground maps},
-  journal={Astron. Astrophys.},
-  volume={594},
-  year={2016},
-  pages={A10},
-  doi={10.1051/0004-6361/201525967}
+  author  = {{Planck Collaboration}},
+  title   = {Planck 2015 results. X. Diffuse component separation: Foreground maps},
+  journal = {Astron. Astrophys.},
+  volume  = {594},
+  year    = {2016},
+  pages   = {A10},
+  doi     = {10.1051/0004-6361/201525967}
 }
 
 @article{MeisnerFinkbeiner2015,
-  author={Meisner, A.M. and Finkbeiner, D.P.},
-  title={Modeling Thermal Dust Emission with Planck and IRAS},
-  journal={Astrophys. J.},
-  volume={798},
-  number={2},
-  pages={88},
-  year={2015},
-  doi={10.1088/0004-637X/798/2/88}
+  author  = {Meisner, A.M. and Finkbeiner, D.P.},
+  title   = {Modeling Thermal Dust Emission with Planck and IRAS},
+  journal = {Astrophys. J.},
+  volume  = {798},
+  number  = {2},
+  pages   = {88},
+  year    = {2015},
+  doi     = {10.1088/0004-637X/798/2/88}
 }
 
 @article{Delabrouille2003,
-  author={Delabrouille, J. et al.},
-  title={A full sky, low foreground, high resolution CMB map from WMAP},
-  journal={MNRAS},
-  volume={346},
-  number={4},
-  pages={1089--1102},
-  year={2003}
+  author  = {Delabrouille, J. et al.},
+  title   = {A full sky, low foreground, high resolution CMB map from WMAP},
+  journal = {MNRAS},
+  volume  = {346},
+  number  = {4},
+  pages   = {1089--1102},
+  year    = {2003}
 }
 
 @article{Cardoso2008,
-  author={Cardoso, J.-F. et al.},
-  title={Component separation with flexible models. Application to CMB data},
-  journal={IEEE J. Sel. Top. Signal Process.},
-  volume={2},
-  number={5},
-  pages={735--746},
-  year={2008},
-  doi={10.1109/JSTSP.2008.2005321}
+  author  = {Cardoso, J.-F. et al.},
+  title   = {Component separation with flexible models. Application to CMB data},
+  journal = {IEEE J. Sel. Top. Signal Process.},
+  volume  = {2},
+  number  = {5},
+  pages   = {735--746},
+  year    = {2008},
+  doi     = {10.1109/JSTSP.2008.2005321}
 }
 
-@article{Eriksen2008,
-  author={Eriksen, H. K. et al.},
-  title={Joint Bayesian Component Separation and CMB Power Spectrum Estimation},
-  journal={Astrophys. J.},
-  volume={676},
-  pages={10--32},
-  year={2008},
-  doi={10.1086/527376}
-}
 
-@article{Planck2016Commander,
-  author={{Planck Collaboration}},
-  title={Planck 2015 results. IX. Diffuse component separation: CMB maps},
-  journal={Astron. Astrophys.},
-  volume={594},
-  pages={A9},
-  year={2016},
-  doi={10.1051/0004-6361/201525936}
-}
+
 
 @article{Planck2016SMICA,
-  author={{Planck Collaboration}},
-  title={Planck 2015 results. IX. Diffuse component separation: CMB maps},
-  journal={Astron. Astrophys.},
-  volume={594},
-  pages={A9},
-  year={2016},
-  doi={10.1051/0004-6361/201525936}
+  author  = {{Planck Collaboration}},
+  title   = {Planck 2015 results. IX. Diffuse component separation: CMB maps},
+  journal = {Astron. Astrophys.},
+  volume  = {594},
+  pages   = {A9},
+  year    = {2016},
+  doi     = {10.1051/0004-6361/201525936}
 }
 
 @article{FGBUSTER1,
-  author={Stompor, R. and Errard, J.},
-  title={Bayesian component separation and CMB B-mode detection in the presence of instrumental systematics},
-  journal={Phys. Rev. D},
-  volume={97},
-  number={8},
-  pages={083006},
-  year={2018},
-  doi={10.1103/PhysRevD.97.083006}
+  author  = {Stompor, R. and Errard, J.},
+  title   = {Bayesian component separation and CMB B-mode detection in the presence of instrumental systematics},
+  journal = {Phys. Rev. D},
+  volume  = {97},
+  number  = {8},
+  pages   = {083006},
+  year    = {2018},
+  doi     = {10.1103/PhysRevD.97.083006}
 }
 
 @misc{FGBUSTER2,
-  author={Errard, J.},
-  title={FGBuster: A Flexible Parametric Component Separation Tool},
-  year={2021},
-  note={\url{https://github.com/fgbuster/fgbuster}}
+  author = {Errard, J.},
+  title  = {FGBuster: A Flexible Parametric Component Separation Tool},
+  year   = {2021},
+  note   = {\url{https://github.com/fgbuster/fgbuster}}
 }
 
 @misc{JAX,
   author = {{Bradbury}, J. and {Frostig}, R. and {Hawkins}, P. and {Johnson}, M.J. and {Leary}, C. and {Maclaurin}, D. and {Necula}, G. and {Paszke}, A. and {VanderPlas}, J. and {Wanderman-Milne}, S. and {Zhang}, Q.},
-  title = {JAX: composable transformations of Python+NumPy programs},
-  year = {2018},
-  note = {\url{http://github.com/google/jax}}
+  title  = {JAX: composable transformations of Python+NumPy programs},
+  year   = {2018},
+  note   = {\url{http://github.com/google/jax}}
 }
 
 
 @software{JAXHEALPY,
-author = {Chanial, Pierre and Biquard, Simon and Kabalan, Wassim},
-license = {GPL-3.0},
-title = {{jax-healpy: Implementation of HEALPix related functions and extensions in JAX}},
-url = {https://github.com/CMBSciPol/jax-healpy},
-howpublished = {\url{https://github.com/CMBSciPol/healpy}},
+  author       = {Chanial, Pierre and Biquard, Simon and Kabalan, Wassim},
+  license      = {GPL-3.0},
+  title        = {{jax-healpy: Implementation of HEALPix related functions and extensions in JAX}},
+  url          = {https://github.com/CMBSciPol/jax-healpy},
+  howpublished = {\url{https://github.com/CMBSciPol/healpy}}
 }
 
 @misc{KMEANSRADEC,
-  author = {E. Sheldon},
-  title = {kmeans\_radec: KMeans clustering on the sphere},
-  year = {2018},
+  author       = {E. Sheldon},
+  title        = {kmeans\_radec: KMeans clustering on the sphere},
+  year         = {2018},
   howpublished = {\url{https://github.com/esheldon/kmeans_radec}}
 }
 
 
 
 @article{Planck2015Galactic,
-  author = {{Planck Collaboration}},
-  title = {Planck 2015 results. XII. Galactic astrophysics using polarized dust emission},
+  author  = {{Planck Collaboration}},
+  title   = {Planck 2015 results. XII. Galactic astrophysics using polarized dust emission},
   journal = {Astronomy \& Astrophysics},
-  volume = {594},
-  pages = {A12},
-  year = {2016},
-  doi = {10.1051/0004-6361/201525905}
+  volume  = {594},
+  pages   = {A12},
+  year    = {2016},
+  doi     = {10.1051/0004-6361/201525905}
 }
 
 @software{kabalan2025jaxgridsearch,
-    author = {Wassim, Kabalan},
-    month = apr,
-    title = {{JAX Distributed Grid Search for Hyperparameter Tuning}},
-    version = {0.1.5},
-    howpublished = {\url {https://github.com/ASKabalan/jax-grid-search}},
-    year = {2025}
+  author       = {Wassim, Kabalan},
+  month        = apr,
+  title        = {{JAX Distributed Grid Search for Hyperparameter Tuning}},
+  version      = {0.1.5},
+  howpublished = {\url {https://github.com/ASKabalan/jax-grid-search}},
+  year         = {2025}
 }
 
 @software{FURAX,
@@ -373,175 +279,173 @@ howpublished = {\url{https://github.com/CMBSciPol/healpy}},
 }
 
 
-@misc{lineax,
-  author = {M. Kabalan and P. Chanial and others},
-  title = {Lineax: Flexible Linear Solvers in JAX},
-  year = {2024},
-  howpublished = {\url{https://github.com/CMBSciPol/lineax}},
-  note = {Accessed: 2024-04-26}
-}
 
 @misc{optax,
-  author = {DeepMind},
-  title = {Optax: Gradient Processing and Optimization Library in JAX},
-  year = {2020},
+  author       = {DeepMind},
+  title        = {Optax: Gradient Processing and Optimization Library in JAX},
+  year         = {2020},
   howpublished = {\url{https://github.com/deepmind/optax}}
 }
 
 @misc{numpyro,
-  author = {Bingham, Eli and Chen, Jonathan P. and Jankowiak, Martin and Obermeyer, Fritz and Pradhan, Neeraj and Karaletsos, Theofanis and Kingma, Diederik P. and Tran, Dustin},
-  title = {NumPyro: A Lightweight Library for Probabilistic Programming in JAX},
-  year = {2019},
+  author       = {Bingham, Eli and Chen, Jonathan P. and Jankowiak, Martin and Obermeyer, Fritz and Pradhan, Neeraj and Karaletsos, Theofanis and Kingma, Diederik P. and Tran, Dustin},
+  title        = {NumPyro: A Lightweight Library for Probabilistic Programming in JAX},
+  year         = {2019},
   howpublished = {\url{https://github.com/pyro-ppl/numpyro}}
 }
 
 
 @misc{jaxopt,
-  author = {R. Blondel and M. Blondel and others},
-  title = {jaxopt: optimization library in JAX},
-  year = {2021},
+  author       = {R. Blondel and M. Blondel and others},
+  title        = {jaxopt: optimization library in JAX},
+  year         = {2021},
   howpublished = {\url{https://github.com/google/jaxopt}}
 }
 
 @article{scipy,
-  title={SciPy 1.0: Fundamental Algorithms for Scientific Computing in Python},
-  author={Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E and others},
-  journal={Nature Methods},
-  volume={17},
-  pages={261--272},
-  year={2020},
-  publisher={Nature Publishing Group}
+  title     = {SciPy 1.0: Fundamental Algorithms for Scientific Computing in Python},
+  author    = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E and others},
+  journal   = {Nature Methods},
+  volume    = {17},
+  pages     = {261--272},
+  year      = {2020},
+  publisher = {Nature Publishing Group}
 }
 
 @misc{adam,
-      title={Adam: A Method for Stochastic Optimization}, 
-      author={Diederik P. Kingma and Jimmy Ba},
-      year={2017},
-      eprint={1412.6980},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      url={https://arxiv.org/abs/1412.6980}, 
+  title         = {Adam: A Method for Stochastic Optimization},
+  author        = {Diederik P. Kingma and Jimmy Ba},
+  year          = {2017},
+  eprint        = {1412.6980},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG},
+  url           = {https://arxiv.org/abs/1412.6980}
 }
 
 @misc{TNC,
-  author = {Waltz, Robert A. and Morales, Jorge L. and Nocedal, Jorge and Orban, Donald},
-  title = {An Interior Algorithm for Nonlinear Optimization that Combines Line Search and Trust Region Steps},
-  year = {2006},
+  author       = {Waltz, Robert A. and Morales, Jorge L. and Nocedal, Jorge and Orban, Donald},
+  title        = {An Interior Algorithm for Nonlinear Optimization that Combines Line Search and Trust Region Steps},
+  year         = {2006},
   howpublished = {Technical Report, Northwestern University},
-  note = {Related to the TNC method used in Scipy}
+  note         = {Related to the TNC method used in Scipy}
 }
 
 @misc{SVD,
-  author = {Golub, Gene H. and Reinsch, Christian},
-  title = {Singular Value Decomposition and Least Squares Solutions},
+  author  = {Golub, Gene H. and Reinsch, Christian},
+  title   = {Singular Value Decomposition and Least Squares Solutions},
   journal = {Numerische Mathematik},
-  year = {1970},
-  volume = {14},
-  number = {5},
-  pages = {403–420},
-  doi = {10.1007/BF02163027}
+  year    = {1970},
+  volume  = {14},
+  number  = {5},
+  pages   = {403–420},
+  doi     = {10.1007/BF02163027}
 }
 
 @article{STOMPER16,
-   title={Forecasting performance of CMB experiments in the presence of complex foreground contaminations},
-   volume={94},
-   ISSN={2470-0029},
-   url={http://dx.doi.org/10.1103/PhysRevD.94.083526},
-   DOI={10.1103/physrevd.94.083526},
-   number={8},
-   journal={Physical Review D},
-   publisher={American Physical Society (APS)},
-   author={Stompor, Radek and Errard, Josquin and Poletti, Davide},
-   year={2016},
-   month=oct }
+  title     = {Forecasting performance of CMB experiments in the presence of complex foreground contaminations},
+  volume    = {94},
+  issn      = {2470-0029},
+  url       = {http://dx.doi.org/10.1103/PhysRevD.94.083526},
+  doi       = {10.1103/physrevd.94.083526},
+  number    = {8},
+  journal   = {Physical Review D},
+  publisher = {American Physical Society (APS)},
+  author    = {Stompor, Radek and Errard, Josquin and Poletti, Davide},
+  year      = {2016},
+  month     = oct
+}
 
 
 @article{ERRAR18,
-   title={Characterizing bias on large scale CMB 
-<mml:math xmlns:mml="http://www.w3.org/1998/Math/MathML" display="inline"><mml:mi>B</mml:mi></mml:math>
--modes after Galactic foregrounds cleaning},
-   volume={99},
-   ISSN={2470-0029},
-   url={http://dx.doi.org/10.1103/PhysRevD.99.043529},
-   DOI={10.1103/physrevd.99.043529},
-   number={4},
-   journal={Physical Review D},
-   publisher={American Physical Society (APS)},
-   author={Errard, Josquin and Stompor, Radek},
-   year={2019},
-   month=feb }
+  title     = {Characterizing bias on large scale CMB 
+               <mml:math xmlns:mml="http://www.w3.org/1998/Math/MathML" display="inline"><mml:mi>B</mml:mi></mml:math>
+               -modes after Galactic foregrounds cleaning},
+  volume    = {99},
+  issn      = {2470-0029},
+  url       = {http://dx.doi.org/10.1103/PhysRevD.99.043529},
+  doi       = {10.1103/physrevd.99.043529},
+  number    = {4},
+  journal   = {Physical Review D},
+  publisher = {American Physical Society (APS)},
+  author    = {Errard, Josquin and Stompor, Radek},
+  year      = {2019},
+  month     = feb
+}
 
 @article{LiteBIRD_PTEP_2022,
-   title={Probing cosmic inflation with theLiteBIRDcosmic microwave background polarization survey},
-   volume={2023},
-   ISSN={2050-3911},
-   url={http://dx.doi.org/10.1093/ptep/ptac150},
-   DOI={10.1093/ptep/ptac150},
-   number={4},
-   journal={Progress of Theoretical and Experimental Physics},
-   publisher={Oxford University Press (OUP)},
-   author={Allys, et al,
-   year={2022},
-   month=nov }
+  title     = {Probing cosmic inflation with theLiteBIRDcosmic microwave background polarization survey},
+  volume    = {2023},
+  issn      = {2050-3911},
+  url       = {http://dx.doi.org/10.1093/ptep/ptac150},
+  doi       = {10.1093/ptep/ptac150},
+  number    = {4},
+  journal   = {Progress of Theoretical and Experimental Physics},
+  publisher = {Oxford University Press (OUP)},
+  author    = {Allys, et al},
+  year      = {2022},
+  month     = nov
+}
 
 
 @article{Panexp_2025,
-      title={Full-sky Models of Galactic Microwave Emission and Polarization at Sub-arcminute Scales for the Python Sky Model}, 
-      author={Pan-Experiment Galactic Science Group and Julian Borrill and Susan E. Clark and Jacques Delabrouille and Andrei V. Frolov and Shamik Ghosh and Brandon S. Hensley and Monica D. Hicks and Nicoletta Krachmalnicoff and King Lau and Myra M. Norton and Clement Pryke and Giuseppe Puglisi and Mathieu Remazeilles and Elisa Russier and Benjamin Thorne and Jian Yao and Andrea Zonca},
-      year={2025},
-      eprint={2502.20452},
-      archivePrefix={arXiv},
-      primaryClass={astro-ph.CO},
-      url={https://arxiv.org/abs/2502.20452}, 
+  title         = {Full-sky Models of Galactic Microwave Emission and Polarization at Sub-arcminute Scales for the Python Sky Model},
+  author        = {Pan-Experiment Galactic Science Group and Julian Borrill and Susan E. Clark and Jacques Delabrouille and Andrei V. Frolov and Shamik Ghosh and Brandon S. Hensley and Monica D. Hicks and Nicoletta Krachmalnicoff and King Lau and Myra M. Norton and Clement Pryke and Giuseppe Puglisi and Mathieu Remazeilles and Elisa Russier and Benjamin Thorne and Jian Yao and Andrea Zonca},
+  year          = {2025},
+  eprint        = {2502.20452},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.CO},
+  url           = {https://arxiv.org/abs/2502.20452}
 }
 
 @article{Zonca_2021,
-  doi = {10.21105/joss.03783},
-  url = {https://doi.org/10.21105/joss.03783},
-  year = {2021},
+  doi       = {10.21105/joss.03783},
+  url       = {https://doi.org/10.21105/joss.03783},
+  year      = {2021},
   publisher = {The Open Journal},
-  volume = {6},
-  number = {67},
-  pages = {3783},
-  author = {Andrea Zonca and Ben Thorne and Nicoletta Krachmalnicoff and Julian Borrill},
-  title = {{The Python Sky Model 3 software}},
-  journal = {Journal of Open Source Software}
+  volume    = {6},
+  number    = {67},
+  pages     = {3783},
+  author    = {Andrea Zonca and Ben Thorne and Nicoletta Krachmalnicoff and Julian Borrill},
+  title     = {{The Python Sky Model 3 software}},
+  journal   = {Journal of Open Source Software}
 }
 
 @article{Thorne_2017,
-   title={{The Python Sky Model: software for simulating the Galactic microwave sky}},
-   volume={469},
-   ISSN={1365-2966},
-   url={http://dx.doi.org/10.1093/mnras/stx949},
-   DOI={10.1093/mnras/stx949},
-   number={3},
-   journal={Monthly Notices of the Royal Astronomical Society},
-   publisher={Oxford University Press (OUP)},
-   author={Thorne, B. and Dunkley, J. and Alonso, D. and Næss, S.},
-   year={2017},
-   month={May},
-   pages={2821–2833}
+  title     = {{The Python Sky Model: software for simulating the Galactic microwave sky}},
+  volume    = {469},
+  issn      = {1365-2966},
+  url       = {http://dx.doi.org/10.1093/mnras/stx949},
+  doi       = {10.1093/mnras/stx949},
+  number    = {3},
+  journal   = {Monthly Notices of the Royal Astronomical Society},
+  publisher = {Oxford University Press (OUP)},
+  author    = {Thorne, B. and Dunkley, J. and Alonso, D. and Næss, S.},
+  year      = {2017},
+  month     = {May},
+  pages     = {2821–2833}
 }
 
 @article{CAMB,
-   title={Efficient Computation of Cosmic Microwave Background Anisotropies in Closed Friedmann‐Robertson‐Walker Models},
-   volume={538},
-   ISSN={1538-4357},
-   url={http://dx.doi.org/10.1086/309179},
-   DOI={10.1086/309179},
-   number={2},
-   journal={The Astrophysical Journal},
-   publisher={American Astronomical Society},
-   author={Lewis, Antony and Challinor, Anthony and Lasenby, Anthony},
-   year={2000},
-   month=aug, pages={473–476} }
+  title     = {Efficient Computation of Cosmic Microwave Background Anisotropies in Closed Friedmann‐Robertson‐Walker Models},
+  volume    = {538},
+  issn      = {1538-4357},
+  url       = {http://dx.doi.org/10.1086/309179},
+  doi       = {10.1086/309179},
+  number    = {2},
+  journal   = {The Astrophysical Journal},
+  publisher = {American Astronomical Society},
+  author    = {Lewis, Antony and Challinor, Anthony and Lasenby, Anthony},
+  year      = {2000},
+  month     = aug,
+  pages     = {473–476}
+}
 
 
 @inproceedings{OPTUNA,
-author = {Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
-booktitle = {Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
-doi = {10.1145/3292500.3330701},
-pages = {2623--2631},
-title = {{Optuna: A next-generation hyperparameter optimization framework}},
-year = {2019}
+  author    = {Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
+  booktitle = {Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
+  doi       = {10.1145/3292500.3330701},
+  pages     = {2623--2631},
+  title     = {{Optuna: A next-generation hyperparameter optimization framework}},
+  year      = {2019}
 }
