--- a/paper/apssamp.tex
+++ b/paper/apssamp.tex
@@ -709,7 +709,7 @@ These trends mirror those observed in the residual \( B \)-mode spectra and furt
     The single-patch model shows a strongly biased estimate with artificially narrow errors, driven by unmodeled systematic residuals. 
     These results highlight the benefit of data-driven clustering in achieving robust and unbiased inference of cosmological parameters.
     }
-    \label{fig:r_likelihood_comparison}
+    \label{fig:r_likelihood_distribution}
 \end{figure*}
 
 
